@startuml
left to right direction

package flask_petclinic {

    package petclinic_owner {

        entity Owner {
            id: Integer
            first_name: String
            last_name: String
            address: String
            city: String
            telephone: String
        }
    }

    package petclinic_pet {

        entity Pet {
            id: Integer
            name: String
            birthdate: Date
        }
    }
    package petclinic_pettype {

        entity PetType {
            id: Integer
            name: String
        }
    }

    package petclinic_visit {

        entity Visit {
            id: Integer
            date: Date
            information: String
        }
    }

    package petclinic_vet {

        entity Vet {
            id: Integer
            first_name: String
            last_name: String
        }
    }

    package petclinic_speciality {

        entity Specialty {
            id: Integer
            name: String
        }

        Owner "1" --> "*"  Pet: pets
        Pet "*" --> "1" PetType: petType
        Pet "1" --> "*" Visit: visits
        Visit "*" --> "1" Vet: vet
        Vet "*" --> "*" Specialty: specialties
    }

    package app_notification {

        entity Notification {
            id: Integer
            datum_started: Date
            datum_finished: Date
            sector: String
            task_name: String
            notification: Boolean
            result_code: Integer
            data1_code = Integer
            data1_txt = String
            data2_code = Integer
            data2_txt = String
            data3_code = Integer
            data3_txt = String
        }
    }

    package app_user {

        entity User {
            id: Integer
            email: String
            name: String
            password_hash: String
        }
    }

}

@enduml
